glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/relationship-types.glx
relationship_types:
  marriage:
    label: "Marriage"
    gedcom: "MARR"


